@@ -49,7 +49,7 @@ ZBX_USER_MSG
  *                                                                            *
  * Parameters: userid - user ID                                               *
  *                                                                            *
- * Return value: SUCCEED - prermission is positive, FAIL - otherwise          *
+ * Return value: SUCCEED - permission is positive, FAIL - otherwise           *
  *                                                                            *
  * Author:                                                                    *
  *                                                                            *
@@ -77,7 +77,7 @@ static int	check_perm2system(zbx_uint64_t userid)
 
 /******************************************************************************
  *                                                                            *
- * Function: get_host_permision                                               *
+ * Function: get_host_permission                                              *
  *                                                                            *
  * Purpose: Return user permissions for access to the host                    *
  *                                                                            *
@@ -91,13 +91,13 @@ static int	check_perm2system(zbx_uint64_t userid)
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static int	get_host_permision(zbx_uint64_t userid, zbx_uint64_t hostid)
+static int	get_host_permission(zbx_uint64_t userid, zbx_uint64_t hostid)
 {
 	DB_RESULT	result;
 	DB_ROW		row;
 	int		user_type = -1, perm = PERM_DENY;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In get_host_permision()");
+	zabbix_log(LOG_LEVEL_DEBUG, "In get_host_permission()");
 
 	result = DBselect("select type from users where userid=" ZBX_FS_UI64,
 			userid);
@@ -127,7 +127,7 @@ static int	get_host_permision(zbx_uint64_t userid, zbx_uint64_t hostid)
 
 	DBfree_result(result);
 out:
-	zabbix_log(LOG_LEVEL_DEBUG, "End of get_host_permision():%s",
+	zabbix_log(LOG_LEVEL_DEBUG, "End of get_host_permission():%s",
 			zbx_permission_string(perm));
 
 	return perm;
@@ -135,7 +135,7 @@ out:
 
 /******************************************************************************
  *                                                                            *
- * Function: get_trigger_permision                                            *
+ * Function: get_trigger_permission                                           *
  *                                                                            *
  * Purpose: Return user permissions for access to trigger                     *
  *                                                                            *
@@ -149,14 +149,14 @@ out:
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-static int	get_trigger_permision(zbx_uint64_t userid, zbx_uint64_t triggerid)
+static int	get_trigger_permission(zbx_uint64_t userid, zbx_uint64_t triggerid)
 {
 	DB_RESULT	result;
 	DB_ROW		row;
 	int		perm = PERM_DENY, host_perm;
 	zbx_uint64_t	hostid;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In get_trigger_permision()");
+	zabbix_log(LOG_LEVEL_DEBUG, "In get_trigger_permission()");
 
 	result = DBselect("select distinct i.hostid from items i,functions f"
 			" where i.itemid=f.itemid and f.triggerid=" ZBX_FS_UI64,
@@ -165,7 +165,7 @@ static int	get_trigger_permision(zbx_uint64_t userid, zbx_uint64_t triggerid)
 	while (NULL != (row = DBfetch(result)))
 	{
 		ZBX_STR2UINT64(hostid, row[0]);
-		host_perm = get_host_permision(userid, hostid);
+		host_perm = get_host_permission(userid, hostid);
 
 		if (perm < host_perm)
 			perm = host_perm;
@@ -173,14 +173,14 @@ static int	get_trigger_permision(zbx_uint64_t userid, zbx_uint64_t triggerid)
 
 	DBfree_result(result);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of get_trigger_permision():%s",
+	zabbix_log(LOG_LEVEL_DEBUG, "End of get_trigger_permission():%s",
 			zbx_permission_string(perm));
 
 	return perm;
 }
 
-static void	add_user_msg(int source, zbx_uint64_t userid, zbx_uint64_t mediatypeid, zbx_uint64_t triggerid, ZBX_USER_MSG **user_msg,
-		char *subject, char *message)
+static void	add_user_msg(int source, zbx_uint64_t userid, zbx_uint64_t mediatypeid,
+		zbx_uint64_t triggerid, ZBX_USER_MSG **user_msg, char *subject, char *message)
 {
 	ZBX_USER_MSG	*p;
 
@@ -189,7 +189,7 @@ static void	add_user_msg(int source, zbx_uint64_t userid, zbx_uint64_t mediatype
 	if (SUCCEED != check_perm2system(userid))
 		return;
 
-	if (EVENT_SOURCE_TRIGGERS == source && PERM_READ_ONLY > get_trigger_permision(userid, triggerid))
+	if (EVENT_SOURCE_TRIGGERS == source && PERM_READ_ONLY > get_trigger_permission(userid, triggerid))
 		return;
 
 	p = *user_msg;
@@ -403,7 +403,7 @@ static void	add_message_alert(DB_ESCALATION *escalation, DB_EVENT *event, DB_ACT
  * Purpose:                                                                   *
  *                                                                            *
  * Parameters: event - event to check                                         *
- *             actionid - action ID for matching                             *
+ *             actionid - action ID for matching                              *
  *                                                                            *
  * Return value: SUCCEED - matches, FAIL - otherwise                          *
  *                                                                            *
@@ -425,7 +425,7 @@ static int	check_operation_conditions(DB_EVENT *event, DB_OPERATION *operation)
 	int	num = 0;
 	int	exit = 0;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In check_opeartion_conditions (operationid:" ZBX_FS_UI64 ")",
+	zabbix_log(LOG_LEVEL_DEBUG, "In check_operation_conditions (operationid:" ZBX_FS_UI64 ")",
 			operation->operationid);
 
 	result = DBselect("select conditiontype,operator,value from opconditions where operationid=" ZBX_FS_UI64 " order by conditiontype",
@@ -482,7 +482,7 @@ static int	check_operation_conditions(DB_EVENT *event, DB_OPERATION *operation)
 	}
 	DBfree_result(result);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End check_opeartion_conditions():%s",
+	zabbix_log(LOG_LEVEL_DEBUG, "End check_operation_conditions():%s",
 			zbx_result_string(ret));
 
 	return ret;
@@ -496,6 +496,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 	int		esc_period = 0, operations = 0;
 	ZBX_USER_MSG	*user_msg = NULL, *p;
 	char		*shortdata, *longdata;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In execute_operations()");
 
 	if (0 == action->esc_period)
 	{
@@ -517,7 +519,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 				escalation->esc_step);
 	}
 
-	while (NULL != (row = DBfetch(result))) {
+	while (NULL != (row = DBfetch(result)))
+	{
 		memset(&operation, 0, sizeof(operation));
 		ZBX_STR2UINT64(operation.operationid, row[0]);
 		operation.actionid	= action->actionid;
@@ -530,7 +533,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 		operation.esc_period	= atoi(row[7]);
 		operation.evaltype	= atoi(row[8]);
 
-		if (SUCCEED == check_operation_conditions(event, &operation)) {
+		if (SUCCEED == check_operation_conditions(event, &operation))
+		{
 			zabbix_log(LOG_LEVEL_DEBUG, "Conditions match our event. Execute operation.");
 
 			substitute_macros(event, action, NULL, &operation.shortdata);
@@ -541,10 +545,13 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 
 			switch (operation.operationtype) {
 				case	OPERATION_TYPE_MESSAGE:
-					if (0 == operation.default_msg) {
+					if (0 == operation.default_msg)
+					{
 						shortdata = operation.shortdata;
 						longdata = operation.longdata;
-					} else {
+					}
+					else
+					{
 						shortdata = action->shortdata;
 						longdata = action->longdata;
 					}
@@ -557,7 +564,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 				default:
 					break;
 			}
-		} else
+		}
+		else
 			zabbix_log(LOG_LEVEL_DEBUG, "Conditions do not match our event. Do not execute operation.");
 
 		zbx_free(operation.shortdata);
@@ -568,7 +576,8 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 
 	DBfree_result(result);
 
-	while (NULL != user_msg) {
+	while (NULL != user_msg)
+	{
 		p = user_msg;
 		user_msg = user_msg->next;
 
@@ -579,10 +588,14 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 		zbx_free(p);
 	}
 
-	if (0 == action->esc_period) {
+	if (0 == action->esc_period)
+	{
 		escalation->status = (action->recovery_msg == 1) ? ESCALATION_STATUS_SLEEP : ESCALATION_STATUS_COMPLETED;
-	} else {
-		if (0 == operations) {
+	}
+       	else
+	{
+		if (0 == operations)
+		{
 			result = DBselect("select operationid from operations where actionid=" ZBX_FS_UI64 " and esc_step_from>%d",
 					action->actionid,
 					escalation->esc_step);
@@ -593,12 +606,16 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 			DBfree_result(result);
 		}
 
-		if (1 == operations) {
+		if (1 == operations)
+		{
 			esc_period = (0 != esc_period) ? esc_period : action->esc_period;
 			escalation->nextcheck = time(NULL) + esc_period;
-		} else
+		}
+		else
 			escalation->status = (action->recovery_msg == 1) ? ESCALATION_STATUS_SLEEP : ESCALATION_STATUS_COMPLETED;
 	}
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of execute_operations()");
 }
 
 static void	process_recovery_msg(DB_ESCALATION *escalation, DB_EVENT *r_event, DB_ACTION *action)
@@ -726,6 +743,8 @@ static void	execute_escalation(DB_ESCALATION *escalation)
 	char		*error = NULL;
 	int		source;
 
+	zabbix_log(LOG_LEVEL_DEBUG, "In execute_escalation()");
+
 	result = DBselect("select source from events where eventid=" ZBX_FS_UI64,
 			escalation->eventid);
 	if (NULL == (row = DBfetch(result)))
@@ -840,7 +859,8 @@ static void	execute_escalation(DB_ESCALATION *escalation)
 
 		zbx_free(action.shortdata);
 		zbx_free(action.longdata);
-	} else
+	}
+	else
 		error = zbx_dsprintf(error, "Action [" ZBX_FS_UI64 "] deleted",
 				escalation->actionid);
 	DBfree_result(result);
@@ -852,6 +872,8 @@ static void	execute_escalation(DB_ESCALATION *escalation)
 				error);
 		zbx_free(error);
 	}
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of execute_escalation()");
 }
 
 static void	process_escalations(int now)
@@ -859,17 +881,20 @@ static void	process_escalations(int now)
 	DB_RESULT	result;
 	DB_ROW		row;
 	DB_ESCALATION	escalation;
+	int		superseded;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In process_escalations()");
 
 	result = DBselect("select escalationid,actionid,triggerid,eventid,r_eventid,esc_step,status"
-			" from escalations where status in (%d,%d) and nextcheck<=%d" DB_NODE,
+			" from escalations where status in (%d,%d,%d) and nextcheck<=%d" DB_NODE,
 			ESCALATION_STATUS_ACTIVE,
+			ESCALATION_STATUS_SUPERSEDED,
 			ESCALATION_STATUS_RECOVERY,
 			now,
 			DBnode_local("escalationid"));
 
-	while (NULL != (row = DBfetch(result))) {
+	while (NULL != (row = DBfetch(result)))
+	{
 		memset(&escalation, 0, sizeof(escalation));
 		ZBX_STR2UINT64(escalation.escalationid, row[0]);
 		ZBX_STR2UINT64(escalation.actionid, row[1]);
@@ -882,9 +907,17 @@ static void	process_escalations(int now)
 
 		DBbegin();
 
+		if (escalation.status == ESCALATION_STATUS_SUPERSEDED)
+		{
+			superseded = 1;
+			escalation.status = ESCALATION_STATUS_ACTIVE;
+		}
+		else
+			superseded = 0;
+
 		execute_escalation(&escalation);
 
-		if (escalation.status == ESCALATION_STATUS_COMPLETED)
+		if (escalation.status == ESCALATION_STATUS_COMPLETED || superseded == 1)
 			DBremove_escalation(escalation.escalationid);
 		else
 			DBexecute("update escalations set status=%d,esc_step=%d,nextcheck=%d"
@@ -898,6 +931,8 @@ static void	process_escalations(int now)
 	}
 
 	DBfree_result(result);
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of process_escalations()");
 }
 
 /******************************************************************************
